<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/backToMainBtn"
        android:onClick="backtoMainPage"
        android:src="@drawable/back_icon"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/edittext_back2"
        android:contentDescription="@string/back_to_main_page" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/aileron_regular"
            android:text="@string/translate_your_text_to_sign"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/idEditSource"
                android:hint="@string/enter_text"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine|textMultiLine"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:gravity="top"
                android:background="@drawable/card_one"
                android:textColorHint="@color/bgColor"
                android:padding="10dp"
                android:fontFamily="@font/aileron_regular"
                android:letterSpacing="0.02" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_Translate_to_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_back"
            android:fontFamily="@font/aileron_regular"
            android:includeFontPadding="false"
            android:letterSpacing="0.2"
            android:text="@string/translate_to_sign"
            android:textAllCaps="false"
            android:textColor="@color/bgColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="8dp">

                <ImageView
                    android:id="@+id/signImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/card_one"
                    android:padding="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
