<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#01083E">

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:src="@drawable/hand" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/aileron_bold"
                    android:includeFontPadding="false"
                    android:text="Welcome to A2T!"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text3"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="@font/aileron_thin"
                    android:includeFontPadding="false"
                    android:letterSpacing="0.03"
                    android:text="Login "
                    android:textColor="@color/white"
                    android:textSize="23sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edittext_back2"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="12dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/mail"
                    app:tint="@color/white" />

                <View
                    android:layout_width="1.5dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/circleColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/aileron_regular"
                        android:includeFontPadding="false"
                        android:text="E-mail"
                        android:textColor="@color/textOffColor"
                        android:textSize="11sp"
                        tools:ignore="SmallSp" />

                    <EditText
                        android:id="@+id/edit_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:fontFamily="@font/aileron_regular"
                        android:hint="@string/prompt_email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/textOffColor"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edittext_back2"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="12dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/lock_pass"
                    app:tint="@color/white" />

                <View
                    android:layout_width="1.5dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/circleColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/aileron_regular"
                        android:includeFontPadding="false"
                        android:text="Password"
                        android:textColor="@color/textOffColor"
                        android:textSize="11sp"
                        tools:ignore="SmallSp" />

                    <EditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:fontFamily="@font/aileron_regular"
                        android:hint="@string/prompt_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/textOffColor"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/regProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:indeterminateTint="@color/white"
                android:padding="6dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/button_back"
                android:fontFamily="@font/aileron_regular"
                android:includeFontPadding="false"
                android:letterSpacing="0.2"
                android:text="@string/action_sign_in_short"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <Button
                android:id="@+id/forgotPasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="26dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/aileron_regular"
                android:includeFontPadding="false"
                android:letterSpacing="0.1"
                android:onClick="forgotPassword"
                android:text="@string/forgotpass"
                android:textColor="@color/cardColor"
                android:textSize="12sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/aileron_thin"
                android:gravity="center"
                android:includeFontPadding="false"
                android:letterSpacing="0.1"
                android:text="Don't have account?"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/button_back"
                android:fontFamily="@font/aileron_regular"
                android:includeFontPadding="false"
                android:letterSpacing="0.2"
                android:onClick="gotoRegisterPage"
                android:padding="2dp"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>